Fixed small glitch with clues not showing

--- a/src/app/nonogram/nonogram.component.css
+++ b/src/app/nonogram/nonogram.component.css
@@ -18,6 +18,10 @@
     width: 100%;
 }
 
+.invisible {
+    color: white;
+}
+
 .generate {
     display: inline-block;
     margin: 40px;
